--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "goit-react-hw-03-image-finder",
+  "name": "goit-react-hw-04-images",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://PavelZavadskiy.github.io/goit-react-hw-03-image-finder/",
+  "homepage": "https://PavelZavadskiy.github.io/goit-react-hw-04-images/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
@@ -16,6 +16,7 @@
     "react-notifications": "^1.7.4",
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.7",
+    "use-toast-notification": "^0.1.3",
     "web-vitals": "^2.1.3",
     "yup": "^1.2.0"
   },
